<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TravelPlanner</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="title_activity_claim">ClaimActivity</string>
    <string name="new_claim">New Claim</string>
    <string name="search">Search</string>
    <string name="create_claim">Create Claim</string>
    <string name="description">Description</string>
    <string name="destinations">Destinations</string>
    <string name="new_word">New</string>
    <string name="claim_name">Claim Name</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="finish">Finish</string>
    <string name="destination_title">Add a Travel Destination</string>
    <string name="cancel">Cancel</string>
    <string name="destination_singular">Destination</string>
    <string name="reason">Reason for Travel</string>
    <string name="approverLogin">Login as Approver</string>
    <string name="adapter_status_description">Status</string>
    <string name="holder">Holder</string>
    <string name="new_expense">New Expense</string>
    <string name="expense_name">Expense Name</string>
    <string name="receipt">Receipt</string>
    <string name="Amount">Amount</string>
    <string name="date">Date</string>
    <string name="Category">Category</string>
    <string name="edit">Edit</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_expense_viewer">ExpenseViewerActivity</string>
    <string name="title_activity_map">GeolocationMapActivity</string>
    <string name="view">View</string>
    <string name="done">Done</string>
    <string name="approve">Approve</string>
    <string name="return_claim">Return</string>
    <string name="tags">Tags</string>
    <string name="$">$</string>
    <string name="add">Add</string>
    <string name="title_activity_edit_tag">Edit Tags</string>
    <string name="eTag">Edit Tags</string>
    <string name="ApproverCommentHint">Input Comments</string>
    <string name="ButtonCommitApproverComment">Commit</string>
    <string name="ApproverCommentView">Comment</string>
    <string name="title_activity_tag_choice_frgament">Add or Edit</string>
    <string name="editExisting">Edit Existing</string>
    <string name="next">Next</string>
    <string name="update">Update</string>
    <string name="filter">Filter</string>
    <string name="title_activity_filter_fragment_dialog">Filter By Tags</string>
    <string name="filterMenu">Filter Claims By Tag</string>
    <string name="manageTags">Manage Tags</string>
    <string name="addExisting">Add Existing</string>
    <string name="set_location">Home Location</string>
    <string name="gps_location">Use Phone\'s GPS</string>
    <string name="map_location">Pick from a map</string>
    <string name="add_A_Receipt">Attach A Receipt</string>
	<string name="remove">Remove</string>
    <string name="home_location">Use Home Location</string>
    <string name="view_map_location">View Map Location</string>
    <string name="view_home_location">View Home Location</string>
    <string name="add_location">Add Location</string>
    
</resources>
