<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    	xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="@color/background">

	<ScrollView 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_alignParentTop="true"
	    android:layout_above="@+id/layoutButtonsExpense">
	    
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
	
			<EditText
			    android:id="@+id/editTextExpenseName"
			    android:singleLine="true"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:textColor="@color/text"
			    android:hint="@string/expense_name"
			    android:layout_marginBottom="6dp"
			    android:ems="10" >

			    <requestFocus />
			</EditText>
			
			<TextView
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginStart="3dp"
			    android:text="@string/Category"
			    android:textColor="@color/text" />
			
			<LinearLayout
			    android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:orientation="horizontal"
		    	android:layout_marginStart="3dp"
		    	android:layout_marginBottom="6dp">

				<Spinner
				    android:id="@+id/categorySpinner"
				    android:layout_width="0dp"
				    android:layout_height="34dp"
				    android:layout_weight="1"
				    android:entries="@array/category_array" />
				
			</LinearLayout>
			
			<TextView
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginStart="3dp"
			    android:text="@string/date"
			    android:textColor="@color/text" />
			
			<LinearLayout
			    android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:orientation="horizontal"
		    	android:layout_marginBottom="6dp"
		    	android:layout_marginStart="3dp"
		    	>    
			    
				<TextView
				    android:id="@+id/textViewDateExpense"
				    android:textColor="@color/text"
				    android:layout_width="0px"
				    android:layout_weight="0.8"
				    android:textAppearance="?android:attr/textAppearanceLarge"
				    android:background="@color/background_dark"
				    android:layout_height="match_parent"
				    />
				
				<ImageButton
				    android:id="@+id/buttonDateExpense"
				    android:layout_width="0dp"
				    android:layout_height="wrap_content"
				    android:layout_weight="0.2"
				    android:onClick="openDateDialog"
				    android:src="@android:drawable/ic_menu_my_calendar" />
				
			</LinearLayout>
			
			<TextView
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginStart="3dp"
			    android:text="@string/receipt"
			    android:textColor="@color/text" />
			
			<LinearLayout
			    android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:orientation="horizontal"
		    	android:layout_marginBottom="6dp"
		    	android:layout_marginStart="3dp"
				>

				<ImageView
				    android:id="@+id/receiptImageHolder"
				    android:layout_width="0dp"
				    android:layout_height="wrap_content"
				    android:layout_weight="0.2"
				    android:src="@drawable/ic_ayy" />

				<Button
				    android:id="@+id/removeReceiptButton"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:onClick="removeReceipt"
				    android:text="@string/remove"
				    android:textColor="@color/text" />
				
			</LinearLayout>

			<TextView
			    android:layout_width="match_parent"
			    android:layout_height="0dp"
			    android:layout_marginStart="3dp"
			    android:layout_weight="1"
			    android:text="@string/Amount"
			    android:textColor="@color/text" />

			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content" >

				<EditText
				    android:id="@+id/editTextAmount"
				    android:layout_width="0dp"
				    android:layout_height="wrap_content"
				    android:layout_weight="1"
				    android:ems="10"
				    android:hint="@string/Amount"
				    android:inputType="numberDecimal"
				    android:maxLength="255"
				    android:singleLine="true"
				    android:textColor="@color/text" />

				<Spinner
				    android:id="@+id/currencySpinner"
				    android:layout_width="123dp"
				    android:layout_height="34dp"
				    android:entries="@array/currency_array" />

			</LinearLayout>
			
			<EditText 
			    android:id="@+id/editTextExpenseDescription"
			    android:inputType="textMultiLine"
			    android:maxLines="10"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:textColor="@color/text"
			    android:hint="@string/description"
			    />	
		</LinearLayout>
	</ScrollView>
	
	<LinearLayout
	    android:id="@+id/layoutButtonsExpense"
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
		android:layout_alignParentBottom="true"
		android:layout_alignParentStart="true">

	  	<Button
		    android:id="@+id/buttonLeaveExpense"
		    android:layout_width="0px"
		    android:layout_weight="0.5"
		    android:layout_height="wrap_content"
		    android:text="@string/cancel"
		    android:onClick="cancelClaim"
		    android:textColor="@color/text" />
	    		
		<Button
		    android:id="@+id/buttonFinishExpense"
		    android:layout_width="0px"
		    android:layout_weight="0.5"
		    android:layout_height="wrap_content"
		    android:onClick="finishClaim"
		    android:text="@string/finish"
		    android:textColor="@color/text" />
		
	</LinearLayout>
		
</RelativeLayout>