<?xml version="1.0" encoding="utf-8"?>

   <LinearLayout
       xmlns:android="http://schemas.android.com/apk/res/android"
       android:id="@+id/topRow"
       android:layout_width="100dp"
       android:layout_height="wrap_content"
       android:layout_alignParentLeft="true"
       android:layout_alignParentTop="true" 
       android:orientation="vertical"
       android:background="@color/background_dark"
       android:padding="1dp"
       >

       <Button
           android:id="@+id/buttonEditExpense"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textSize="12sp"
           android:textColor="@color/text"
           android:text="@string/edit" />
       
       <Button
           android:id="@+id/buttonViewExpense"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/view"
           android:textColor="@color/text"
           android:textSize="12sp" />

       <Button
           android:id="@+id/buttonDeleteExpense"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textSize="12sp"
           android:text="@string/delete"
           android:textColor="@color/text" />



   </LinearLayout>
