<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.ualberta.cmput301w15t13.Activities.LoginActivity" >

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/username"
        android:maxLength="255"
        android:singleLine="true"
        android:textColor="@color/text" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/approverLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonLogin"
        android:layout_alignRight="@+id/buttonLogin"
        android:layout_below="@+id/buttonLogin"
        android:onClick="approverLogin"
        android:text="@string/approverLogin"
        android:textColor="@color/text" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextUsername"
        android:layout_alignRight="@+id/editTextUsername"
        android:layout_below="@+id/editTextUsername"
        android:onClick="claimantLogin"
        android:text="@string/login"
        android:textColor="@color/text" />

</RelativeLayout>