<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp"
    android:background="@color/background" >

    <TextView
        android:id="@+id/textViewDestinationDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="3dp"
        android:text="@string/destination_title"
        android:textColor="@color/text"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <LinearLayout 
        android:id="@+id/title_buffer"
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@color/background_highlight"
        android:layout_below="@+id/textViewDestinationDialogTitle"
        android:orientation="horizontal"
        />
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/title_buffer"
        android:orientation="horizontal">
            <LinearLayout
		        android:layout_height="wrap_content"
		        android:layout_width="0px"
		        android:layout_weight="0.8"
		        android:orientation="vertical">
        	
        		<EditText
			        android:id="@+id/editTextDestinationName"
			        android:layout_height="wrap_content"
			        android:layout_width="match_parent"
			        android:hint="@string/destination_singular"
			        android:singleLine="true"
			        android:textColor="@color/text" >
			        <requestFocus />
			        </EditText>

    
			    <EditText
			        android:id="@+id/editTextReasonName"
			        android:singleLine="true"
			        android:layout_height="wrap_content"
			        android:layout_width="match_parent"
			        android:layout_marginBottom="6dp"
			        android:hint="@string/reason"
			        android:textColor="@color/text" />
       
		    </LinearLayout>
       
    </LinearLayout>
    
   

</RelativeLayout>
